syntax = "proto3";

import "google/protobuf/timestamp.proto";

package bullhorn.event;

option go_package = "github.com/danielMensah/bullhorn-sync-poc/internal/proto";

message Event {
  int32 entity_id = 1;
  string entity_name = 2;
  string entity_event_type = 3;
  repeated string updated_properties = 4;
  google.protobuf.Timestamp event_timestamp = 5;
}
